# justmail

./: Cargo.toml  Dockerfile  LICENSE  config.yaml  spec.yaml
.sqlx/: query-1a681fca519cb8e9504913659c6065989046f90dada0e6e30ca947029455f88e.json  query-1c8e881f2843170fd715c17ea40df23d243765eb868d70a9fd26811dafa45600.json  query-51fd7ba921deb85b263e50f6609769d55272a24401e37aa3c8c610ebd4fdd071.json  query-a1f636ec63cec26ac9a6f0f8e55076621d9612eda01e9b6f3b6dc9e0e1847761.json  query-ca0bc8cd6fce62e441cec949f68297b91b6d97a3d1415ee8ea6afcb25992b751.json
configuration/: base.yaml  production.yaml
migrations/: 20260307203859_make_status_not_null_in_subscriptions.sql  20260316234056_add_created_at_to_subscription_tokens.sql  20260316235717_make_created_at_not_null_in_subscription_tokens.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: login.rs  mod.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
