[package]
name = "justmail"
version = "0.1.0"
authors = ["Maris Chen <maris.chen@outlook.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "justmail"
test = false

[dependencies]
actix-web = "4.12.1"
tokio = {version = "1.49.0", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
config = "0.15.19"
uuid = {version = "1.21.0", features = ["v4"]}
chrono = "0.4.43"
tracing = {version = "0.1.44", features = ["log"]}
tracing-subscriber = {version = "0.3.22", features = ["registry", "env-filter", "fmt", "json"]}
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = {version = "0.10.3", features = ["serde"]}
tracing-actix-web = "0.7.21"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.13.2"
once_cell = "1.21.3"